tests/rustdoc-ui/doctest/no-capture-fail.stderr
error: struct literal body without path
  --> $DIR/no-capture-fail.rs:8:10
   |
LL |   fn foo() {
   |  __________^
LL | |     Input: 123
LL | | }
   | |_^
   |
help: you might have forgotten to add the struct literal inside the block
   |
LL ~ fn foo() { SomeStruct {
LL |     Input: 123
LL ~ } }
   |

error[E0601]: `main` function not found in crate `rust_out`
  --> $DIR/nocapture-fail.rs:10:2
   |
LL | }
   |  ^ consider adding a `main` function to `$DIR/nocapture-fail.rs`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0601`.
